fixed icons on footer being stretched

--- a/src/styles/Less/Colors.less
+++ b/src/styles/Less/Colors.less
@@ -3,3 +3,4 @@
 @font-color: rgba(66, 74, 78, 0.8);
 @background-footer: #4d565b;
 @background-navbar: rgba(136, 150, 157, 0.5);
+@font-white: #fff;
