--- a/src/styles/Less/footer.less
+++ b/src/styles/Less/footer.less
@@ -1,5 +1,6 @@
 @import "Colors.less";
 @import "MediaQuery.less";
+
 .total-footer {
   margin: 0;
   padding: 0;
@@ -25,7 +26,6 @@
     align-items: center;
     flex-direction: column;
     @media @phone {
-      align-items: stretch;
       padding: 0;
       ul {
         padding-left: 1%;
@@ -51,7 +51,7 @@
 
     .social-icon__link {
       font-size: 2rem;
-      color: #fff;
+      color: @font-white;
       margin: 0 10px;
       display: inline-block;
       transition: 0.5s;
@@ -63,7 +63,7 @@
     .menu__link {
       cursor: pointer;
       font-size: 1.2rem;
-      color: #fff;
+      color: @font-white;
       margin: 0 10px;
       display: inline-block;
       transition: 0.5s;
@@ -79,7 +79,7 @@
 }
 
 .footer p {
-  color: #fff;
+  color: @font-white;
   margin: 15px 0 10px 0;
   font-size: 1rem;
   font-weight: 300;
